--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/20.4.27/miui_MIMIX3_20.4.27_8f7879221b_10.0.zip
-  ROM_NAME: MIUI
+  ROM_URL: https://zh.osdn.net/projects/revengeos/storage/lavender/RevengeOS-4.0-R-OFFICIAL-lavender-20210204-1254.zip
+  ROM_NAME: Generic
   TZ: Asia/Shanghai
 
 jobs:
