--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -39,12 +39,15 @@ jobs:
               sed -i 's/\|\| exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
               sed -i 's/exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
        
-       - name: Setting up ErfanGSI requirements with Xiaoxin script
+       - name: Setting up ErfanGSI requirements
          run: |
+              sudo chmod -R 777 ErfanGSIs
               cd ErfanGSIs
-              mkdir ./output
-              wget https://raw.githubusercontent.com/TimeMapleLing/actions_build_SGSI/main/bin/setup.sh -o setup-xiaoxin.sh
-              sudo bash setup-xiaoxin.sh
+              sudo bash setup.sh
+              sudo sed -i '7c AB=true' url2GSI.sh
+              sudo sed -i '8c Aonly=false' url2GSI.sh
+       - name: Download Rom/下载ROM & Generate A/B GSI/制作A/B ErfanGSI 
+         run: sudo ./ErfanGSIs/url2GSI.sh $ROM_URL $ROM_NAME AB
        
        - name: Download Stock Rom & Generate GSI
          run: sudo ./ErfanGSIs/url2GSI.sh -c -b $ROM_URL $ROM_NAME
