--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -26,18 +26,23 @@ jobs:
     steps:
        - name: Checkout
          uses: actions/checkout@master
+       
+       - name: Clean Up
+         run: |
+           docker rmi `docker images -q`
+           sudo rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d 
+           sudo -E apt-get -y purge azure-cli ghc* zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+           sudo -E apt-get update
+           sudo -E apt-get -y autoremove --purge
+           sudo -E apt-get clean 
            
        - name: Initialization environment
          run: |
-            sudo -E apt-get -qq install git wget
+            sudo -E apt-get -qq update
+            sudo -E apt-get -qq install git openjdk-8-jdk wget
        
-       - name: Clone ErfanGSI Source Code
-         run: git clone --recurse-submodules https://github.com/erfanoabdi/ErfanGSIs.git ErfanGSIs
-         
-       - name: Fix exit
-         run: |
-              sed -i 's/\|\| exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
-              sed -i 's/exit 1//g' $GITHUB_WORKSPACE/ErfanGSIs/url2GSI.sh
+       - name: Clone Source Code
+         run: git clone --recurse-submodules https://github.com/laohan233/ErfanGSIs.git
        
        - name: Setting up ErfanGSI requirements
          run: |
@@ -49,20 +54,12 @@ jobs:
        - name: Download Rom/下载ROM & Generate A/B GSI/制作A/B ErfanGSI 
          run: sudo ./ErfanGSIs/url2GSI.sh $ROM_URL $ROM_NAME AB
        
-       - name: Download Stock Rom & Generate GSI
-         run: sudo ./ErfanGSIs/url2GSI.sh -c -b $ROM_URL $ROM_NAME
-       
-       - name: Zip GSI  
+       - name: ZIP GSI /打包GSI
          run: |
-              cd $GITHUB_WORKSPACE/ErfanGSIs/output
               mkdir final
-              zip -r final/GSI.zip ./*
+              zip -r final/GSI_Auto-in-Github.zip /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
        
-       - name: Upload GSI to WeTransfer
+       - name: Upload GSI to WeTransfer/下载地址为WeTransfer
          run: |
-              cd $GITHUB_WORKSPACE/ErfanGSIs/output
               curl -sL https://git.io/file-transfer | sh
-              ./transfer wet ./final/GSI.zip
-
-         
-            
+              ./transfer wet final/GSI_Auto-in-Github.zip
